new features, user serach, cooments, multirole, admin panel changes, [check doc/new_feature_todo.md]
